data/Java/05-use-uninitialized-instance-variable/4/[M]Error.txt
https://stackoverflow.com/questions/49072803/error-variable-might-not-have-been-initialized-how-to-initialize-arraylist
Main.java:31: error: variable 'bCoeffs' might not have been initialized
                bCoeffs.add(temp);
                ^